--- a/DedicatedWorker/style.css
+++ b/DedicatedWorker/style.css
@@ -4,7 +4,7 @@
 	align-items: center;
 }
 
-.buttonSubmit {
+button {
 	display: block;
 	margin: auto;
 	margin-top: 20px;
@@ -16,6 +16,6 @@
 
 }
 
-#h1 {
+h1 {
 	text-align: center;
 }
